        PR tree-optimization/30858         * tree-vectorizer.c (vect_is_simple_reduction): Check that the stmts         in the reduction cycle have a single use in the loop.         * tree-vectorizer.h (relevant): Add documentation.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@122220 138bc75d-0d04-0410-961f-82ee72b054a4